[gd_scene load_steps=2 format=3 uid="uid://bdspal4chhhh5"]

[ext_resource type="Script" uid="uid://dcygg8obq6n6n" path="res://editor/1main_editor/metadata/metadata.gd" id="1_4uh8j"]

[node name="Metadata" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_4uh8j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Form" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ClassInfo" type="VBoxContainer" parent="VBoxContainer/Form"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/Form/ClassInfo"]
layout_mode = 2
text = "Class Info"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Form/ClassInfo"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
layout_mode = 2
text = "Description:
 
 "

[node name="Description" type="TextEdit" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CourseLabel" type="Label" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
layout_mode = 2
text = "Course:"

[node name="Course" type="LineEdit" parent="VBoxContainer/Form/ClassInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Form"]
layout_mode = 2

[node name="AuthorInfo" type="VBoxContainer" parent="VBoxContainer/Form"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/Form/AuthorInfo"]
layout_mode = 2
text = "Author Info"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Form/AuthorInfo"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/Form/AuthorInfo/GridContainer"]
layout_mode = 2
text = "Name:"

[node name="AuthorName" type="LineEdit" parent="VBoxContainer/Form/AuthorInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/Form/AuthorInfo/GridContainer"]
layout_mode = 2
text = "Description:
 
 "

[node name="AuthorDescription" type="TextEdit" parent="VBoxContainer/Form/AuthorInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Form2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftSpacer" type="Control" parent="VBoxContainer/Form2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OtherInfo" type="VBoxContainer" parent="VBoxContainer/Form2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Title" type="Label" parent="VBoxContainer/Form2/OtherInfo"]
layout_mode = 2
text = "File Info"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Form2/OtherInfo"]
layout_mode = 2
columns = 2

[node name="VersionLabel" type="Label" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
layout_mode = 2
text = "File version:"

[node name="Version" type="LineEdit" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DateLabel" type="Label" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
layout_mode = 2
text = "Date:"

[node name="Date" type="LineEdit" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LicenseLabel" type="Label" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
layout_mode = 2
text = "License:"

[node name="License" type="LineEdit" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EditorLabel" type="Label" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
layout_mode = 2
text = "Editor version:"

[node name="Editor" type="LineEdit" parent="VBoxContainer/Form2/OtherInfo/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightSpacer" type="Control" parent="VBoxContainer/Form2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"
